# dicas-orm-pysul2025

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  conftest.py  justfile  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: tests.yml
blog/: admin.py  dto.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_artigo_conteudo_alter_artigo_resumo_and_more.py  0003_alter_artigo_options.py  0004_tag_artigo_tags.py
blog/services/: artigo_service.py
blog/static/blog/css/: ckeditor-width.css
blog/templates/blog/: artigo_detail.html  artigo_detail_limpo.html  artigo_limpo.html  artigo_list.html  base.html
blog/tests/: test_artigo_service.py  test_views.py
config/: settings.py  urls.py
